[KH] fix horizontal overflow on mobile

--- a/src/Navigation/Navigation.module.css
+++ b/src/Navigation/Navigation.module.css
@@ -9,10 +9,18 @@
   z-index: 100;
 }
 
-@media only screen and (max-width: 720px) {
+@media (min-width: 1280px) {
+
+  .button + .button {
+    margin-left: 24px;
+  }
+
+}
+
+@media (max-width: 1280px) {
   .navigation {
     position: absolute;
-    padding: 16px 32px 0;
+    padding: 16px 24px 0;
   }
 
   .button + .button {
@@ -34,10 +42,6 @@
 .button:hover {
   border: 1px solid var(--superiority);
   box-shadow: 0 0 8px 0 rgb(0 0 0 / 15%);
-}
-
-.button + .button {
-  margin-left: 24px;
 }
 
 .spacer {
